# Curiosity-Coding-Frontend

./: .gitignore  README.md  astro.config.mjs  example.csv  install-macos.sh  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.mjs  tsconfig.json  wrangler.jsonc
.github/: dependabot.yml
.github/workflows/: desktop-release.yml  test.yml
.letta/: settings.json  settings.local.json
public/: .assetsignore  _headers  manifest.webmanifest  pwa-register.js  robots.txt  sw.js  theme.js
src/: env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CsvCoder.tsx  DesktopTopbar.tsx  DesktopUpdateNotice.tsx  ThemeToggle.tsx
src/components/CsvCoder/: CodingPanel.tsx  KeybindSettings.tsx  ModalDialog.tsx  OverviewPanel.tsx  QuestionPanel.tsx  SessionStorage.ts  csv.ts  keybinds.ts  types.ts  ui.tsx  useAutosave.ts  useCodingSession.ts  useCsvExport.ts  useCsvImport.ts  utils.ts
src/data/: codingOptions.ts
src/pages/: index.astro  sw.js.ts
src/styles/: global.css
src/utils/: csv.ts
tests/: astro-dev-server.mjs  csv-coder.spec.ts  desktop-export.spec.ts  desktop-update-notice.spec.ts  pwa-offline.spec.ts  viewport-shell.spec.ts
tests/unit/: csv.test.ts  session.test.ts
