[package]
name = "curiosity-coding"
version = "0.1.0"
description = "Local CSV coding tool for Curiosity student responses"
authors = ["Visruth Srimath Kandali"]
edition = "2021"
license = "MIT"

[lib]
name = "curiosity_coding_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde_json = "1"
